--- a/map.html
+++ b/map.html
@@ -13,7 +13,8 @@
 
 	    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
  		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    	<script type="text/javascript" src="js/main.js"></script>
+    	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
 	</head>
     
 	<body onload="onBodyLoad()">
