--- a/map.html
+++ b/map.html
@@ -19,6 +19,7 @@
     
 	<body onload="onBodyLoad()">
 	    <!--<h1>現在地を地図上に表示</h1>-->
+        <p id="debugText"></p>
 		<div id="mapCanvas" style="width:100%; height:100%"></div>
         <a href="index.html">戻る</a>
 	</body>
