--- a/map.html
+++ b/map.html
@@ -18,8 +18,7 @@
 	</head>
     
 	<body onload="onBodyLoad()">
-	    <!--<h1>現在地を地図上に表示</h1>-->
-        <p id="debugText"></p>
+        <p id="debugText">DEBUG...</p>
 		<div id="mapCanvas" style="width:100%; height:100%"></div>
         <a href="index.html">戻る</a>
 	</body>
