--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@
 	</head>
     
 	<body onload="onBodyLoad()">
-        <p id="debugText">DEBUG...</p>
+        <!--<p id="debugText">DEBUG...</p>-->
 		<div id="mapCanvas" style="width:100%; height:100%"></div>
         <a href="index.html">戻る</a>
 	</body>
