--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>位置情報の利用</h1>
 		<ul>
 			<li><a href="map.html">Google Mpasの表示</a></li>
-			<li><a href="watchMap.html">変更をGoogle Maps上に反映</a></li>
+			<!--<li><a href="watchMap.html">変更をGoogle Maps上に反映</a></li>-->
 		</ul>
 	</body>
 </html>
